--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "simple blogapp",
   "main": "app.js",
-  "type": "module",
+  "engines": {
+    "node": "12.21.0",
+    "npm":"8.15.0"
+  },
+   
   "scripts": {
-    "start": "nodemon --experimental-modules --es-module-specifier-resolution=node app.js",
+    "start": "node public/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "bishal maji",
