--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "1.0.0",
   "description": "simple blogapp",
   "main": "app.js",
+  "type": "module",
   "engines": {
     "node": "12.21.0",
-    "npm":"8.15.0"
+    "npm": "8.15.0"
   },
-   
   "scripts": {
-    "start": "node public/app.js",
+    "start": "node --experimental-modules --es-module-specifier-resolution=node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "bishal maji",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20"
